--- a/multimarket.dao/genericDao/pom.xml
+++ b/multimarket.dao/genericDao/pom.xml
@@ -10,6 +10,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>dan.home.work</groupId>
+			<artifactId>multimarket.commonStuff</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 		</dependency>
