--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -42,7 +42,16 @@
 				<artifactId>spring-context</artifactId>
 				<version>${springframework.version}</version>
 			</dependency>
-
+<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>1.3.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<version>1.3.0.RELEASE</version>
+		</dependency>
 
 			<!-- jackson for json -->
 			<dependency>
@@ -50,6 +59,11 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
+	<!-- <dependency> -->
+	<!-- <groupId>javax.servlet</groupId> -->
+	<!-- <artifactId>jstl</artifactId> -->
+	<!-- <version>1.2</version> -->
+	<!-- </dependency> -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
 				<artifactId>javax.servlet-api</artifactId>
@@ -84,6 +98,14 @@
 				<version>9.4-1200-jdbc41</version>
 			</dependency>
 
+			<dependency>
+				<!-- Import dependency management from Spring Boot -->
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>1.3.3.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
