--- a/webGate/pom.xml
+++ b/webGate/pom.xml
@@ -1,60 +1,68 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>multimarket.productManager</artifactId>
-	<packaging>jar</packaging>
-
 	<parent>
 		<groupId>dan.home.work</groupId>
 		<artifactId>multimarket.parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-
+	<artifactId>multimarket.webGate</artifactId>
+	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
 			<groupId>dan.home.work</groupId>
-			<artifactId>multimarket.genericDao</artifactId>
+			<artifactId>multimarket.commonStuff</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
+		<!-- <artifactId>jackson-databind</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 
 
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.protobuf</groupId> -->
+		<!-- <artifactId>protobuf-java</artifactId> -->
+		<!-- <version>3.0.0-beta-2</version> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>javax.servlet</groupId> -->
+		<!-- <artifactId>jstl</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.springframework.boot</groupId>
-					<artifactId>spring-boot-starter-logging</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.4</version>
-					<configuration>
-						<warSourceDirectory>src/main/webapp</warSourceDirectory>
-						<warName>ProductManager</warName>
-						<failOnMissingWebXml>false</failOnMissingWebXml>
-					</configuration>
-				</plugin>
+				<!-- <plugin> -->
+				<!-- <groupId>org.apache.maven.plugins</groupId> -->
+				<!-- <artifactId>maven-war-plugin</artifactId> -->
+				<!-- <version>2.4</version> -->
+				<!-- <configuration> -->
+				<!-- <warSourceDirectory>src/main/webapp</warSourceDirectory> -->
+				<!-- <warName>WebGate</warName> -->
+				<!-- <failOnMissingWebXml>false</failOnMissingWebXml> -->
+				<!-- </configuration> -->
+				<!-- </plugin> -->
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.3</version>
@@ -63,17 +71,15 @@
 						<target>1.8</target>
 					</configuration>
 				</plugin>
-
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 					<configuration>
 						<executable>true</executable>
 					</configuration>
-
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<finalName>ProductManager</finalName>
+		<finalName>WebGate</finalName>
 	</build>
 </project>
