--- a/multimarket.dao/genericDao/pom.xml
+++ b/multimarket.dao/genericDao/pom.xml
@@ -34,6 +34,15 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
