--- a/productManager/pom.xml
+++ b/productManager/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>dan.home.work</groupId>
-			<artifactId>multimarket.genericDao</artifactId>
+			<artifactId>multimarket.productDao</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -43,6 +43,11 @@
 					<artifactId>spring-boot-starter-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.11.0</version>
 		</dependency>
 	</dependencies>
 
@@ -74,7 +79,6 @@
 					<configuration>
 						<executable>true</executable>
 					</configuration>
-
 				</plugin>
 			</plugins>
 		</pluginManagement>
