--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.contextPath=/ProductManager
 spring.jooq.sql-dialect=POSTGRES
 flyway.enabled=false
 server.port=8090
+security.enable-csrf=false
+logging.level.=DEBUG
