--- a/productManager/src/main/resources/application.properties
+++ b/productManager/src/main/resources/application.properties
@@ -4,3 +4,5 @@ flyway.enabled=false
 server.port=8090
 security.enable-csrf=false
 logging.level.=DEBUG
+multipart.maxFileSize=128MB
+multipart.maxRequestSize=128MB
