--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -9,6 +9,16 @@
 		<springframework.version>4.2.0.RELEASE</springframework.version>
 		<jackson.version>2.5.3</jackson.version>
 	</properties>
+
+
+	 <scm>
+        <url>https://github.com/multimarket_repo/parent</url>
+        <connection>scm:git:https://github.com/danutz87smen/multimarket_repo.git</connection>
+        <developerConnection>scm:git:https://github.com/danutz87smen/multimarket_repo.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+
 	<dependencyManagement>
 		<dependencies>
 			<!-- spring -->
@@ -120,4 +130,14 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<build>
+		<plugins>
+	      <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-release-plugin</artifactId>
+	        <version>2.5.3</version>
+	      </plugin>
+	    </plugins>
+	</build>
 </project>
