--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dan.home.work</groupId>
 	<artifactId>multimarket.parent</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 	<properties>
 		<springframework.version>4.2.0.RELEASE</springframework.version>
@@ -15,7 +14,7 @@
         <url>scm:git:git@github.com:danutz87smen/multimarket_repo/parent.git</url>
         <connection>scm:git:git@github.com:danutz87smen/multimarket_repo/parent.git</connection>
         <developerConnection>scm:git:git@github.com:danutz87smen/multimarket_repo/parent.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1.0.0</tag>
     </scm>
 
 
