--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dan.home.work</groupId>
 	<artifactId>multimarket.parent</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<properties>
 		<springframework.version>4.2.0.RELEASE</springframework.version>
@@ -14,7 +14,7 @@
         <url>scm:git:https://danutz87smen:demiurg22@github.com/danutz87smen/multimarket_repo.git</url>
         <connection>scm:git:https://danutz87smen:demiurg22@github.com/danutz87smen/multimarket_repo.git</connection>
         <developerConnection>scm:git:https://danutz87smen:demiurg22@github.com/danutz87smen/multimarket_repo.git</developerConnection>
-        <tag>1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
 
